[tool.poetry]
name = "khoai-wirebender-master"
version = "0.1.0"
description = "Phan mem dieu khien may uon day kim loai CNC"
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
pyserial = "^3.5"
pillow = "^12.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "planner:main"